Update main home button URL

--- a/3.html
+++ b/3.html
@@ -774,7 +774,7 @@
     // Main home button
     btnMainHome?.addEventListener('click', () => {
       // 지정된 홈 주소로 이동
-      window.location.href = 'https://claude.ai/public/artifacts/8de04532-c953-4c5c-b8fd-e7573a195f44';
+      window.location.href = 'https://chaeavivi.github.io/colortherapy/healing.html';
     });
 
     // 페이지 로드 완료
